force-app/main/default/objects/TriggerFeature__mdt/TriggerFeature__mdt.object-meta.xml
<CustomObject>
    <description>Registers a feature for execution in trigger contexts (before insert, after insert, etc). Only active controls are executed.</description>
    <label>Trigger Feature</label>
    <pluralLabel>Trigger Features</pluralLabel>
</CustomObject>