force-app/main/default/objects/TriggerFeature__mdt/fields/AfterDelete__c.field-meta.xml
<CustomField>
    <fullName>AfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;after delete&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;after delete&quot; context.</inlineHelpText>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>