force-app/main/default/objects/TriggerFeature__mdt/fields/AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>AfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;after insert&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;after insert&quot; context.</inlineHelpText>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>