force-app/main/default/objects/TriggerFeature__mdt/fields/Asynchronous__c.field-meta.xml
<CustomField>
    <fullName>Asynchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asynchronous</label>
    <type>Checkbox</type>
</CustomField>