force-app/main/default/objects/TriggerFeature__mdt/fields/BeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>BeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;before delete&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;before delete&quot; context.</inlineHelpText>
    <label>Before Delete</label>
    <type>Checkbox</type>
</CustomField>