force-app/main/default/objects/TriggerFeature__mdt/fields/BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>BeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;before insert&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;before insert&quot; context.</inlineHelpText>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>