force-app/main/default/objects/TriggerFeature__mdt/fields/BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>BeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;before update&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;before update&quot; context.</inlineHelpText>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>