force-app/main/default/objects/TriggerFeature__mdt/fields/FilterField__c.field-meta.xml
<CustomField>
    <fullName>FilterField__c</fullName>
    <description>The name of the field used for filtering.</description>
    <inlineHelpText>The name of the field used for filtering.</inlineHelpText>
    <label>Filter Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>