force-app/main/default/objects/TriggerFeature__mdt/fields/FilterValue__c.field-meta.xml
<CustomField>
    <fullName>FilterValue__c</fullName>
    <description>The value of the field used for filtering.</description>
    <inlineHelpText>The value of the field used for filtering.</inlineHelpText>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>