force-app/main/default/objects/TriggerFeature__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activates the handler for processing.</description>
    <inlineHelpText>Activates the handler. Inactive handlers are only executed with the forceActivateFeature API.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>