force-app/main/default/objects/TriggerFeature__mdt/fields/LoadOrder__c.field-meta.xml
<CustomField>
    <fullName>LoadOrder__c</fullName>
    <description>The order of execution for this specific handler. The order is in relation to other triggers on the same object with the same Trigger Actions, for example, all “before insert” triggers on Account.</description>
    <inlineHelpText>The order of execution for this specific handler. The order is in relation to other triggers on the same object with the same Trigger Actions, for example, all “before insert” triggers on Account.</inlineHelpText>
    <label>Load Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>