force-app/main/default/objects/TriggerFeature__mdt/fields/SObjectName__c.field-meta.xml
<CustomField>
    <fullName>SObjectName__c</fullName>
    <description>The name of the object the class should act on, for example, Account, Contact, Opportunity.</description>
    <inlineHelpText>Set the SObject where the handler is executed. The SObject must implement a trigger that calls the framework.</inlineHelpText>
    <label>SObject Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>