force-app/main/default/objects/TriggerFeature__mdt/fields/UsernamesToExclude__c.field-meta.xml
<CustomField>
    <fullName>UsernamesToExclude__c</fullName>
    <description>Semicolon separated list of Salesforce usernames that this trigger will NOT run for. Leave blank to run for all users.</description>
    <inlineHelpText>Semicolon separated list of Salesforce usernames that this trigger will NOT run for. Leave blank to run for all users.</inlineHelpText>
    <label>Usernames To Exclude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>